--- a/CP380-B2-BlockWebAPI/CP380-B2-BlockWebAPI.csproj
+++ b/CP380-B2-BlockWebAPI/CP380-B2-BlockWebAPI.csproj
@@ -11,7 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dependee" Version="1.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CP380-B1-BlockList\CP380-B1-BlockList.csproj" />
   </ItemGroup>
 
 </Project>
